--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@auth0/angular-jwt": "^5.1.2",
-    "@capacitor/app": "5.0.6",
+    "@capacitor/android": "5.5.1",
+    "@capacitor/app": "^5.0.6",
     "@capacitor/core": "5.5.1",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@jcesarmobile/ssl-skip": "0.2.0",
